# tmsu-nautilus-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  SCREENSHOTS.md
.github/workflows/: ci.yml
src/: column_provider.rs  gtk_helpers.rs  info_provider.rs  lib.rs  menu_provider.rs  nautilus_extension.rs  nautilus_ffi.rs  property_page_provider.rs  tags_list.rs  tmsu_commands.rs  tmsu_nautilus.rs
