[package]
name = "tmsu-nautilus"
version = "0.5.3"
authors = ["Andrew Shu <talklittle@gmail.com>"]
license = "GPL-3.0-only"
description = "Nautilus 3.0 extension for file tagging using TMSU"
repository = "https://github.com/talklittle/tmsu-nautilus-rs"
readme = "README.md"

[lib]
name = "tmsu_nautilus"
crate-type = ["dylib"]

[package.metadata.deb]
depends = "libnautilus-extension1a (>= 1:3.18.0)"
assets = [
    ["target/release/libtmsu_nautilus.so", "usr/lib/nautilus/extensions-3.0/libtmsu-nautilus.so", "644"],
]

[dependencies]
gdk = "0.7.0"
glib = "0.4.0"
glib-sys = "0.5.0"
gobject-sys = "0.5.0"
libc = "0.2"
nautilus-extension = "0.4.0"
url = "1.2.0"

[dependencies.gtk]
version = "0.3.0"
features = ["v3_18"]

[dependencies.gtk-sys]
version = "0.5.0"
features = ["v3_18"]

