[package]
name = "tmsu-nautilus"
version = "0.6.2"
edition = "2021"
authors = ["Andrew Shu <talklittle@gmail.com>"]
license = "GPL-3.0-only"
description = "Nautilus 3.0 extension for file tagging using TMSU"
repository = "https://github.com/talklittle/tmsu-nautilus-rs"
readme = "README.md"

[lib]
name = "tmsu_nautilus"
crate-type = ["dylib"]

[package.metadata.deb]
depends = "libnautilus-extension1a (>= 1:3.20.0)"
assets = [
    ["target/release/libtmsu_nautilus.so", "usr/lib/nautilus/extensions-3.0/libtmsu-nautilus.so", "644"],
]

[dependencies]
gdk = "0.15.4"
glib = "0.15.12"
glib-sys = "0.15.10"
gobject-sys = "0.15.10"
libc = "0.2"
nautilus-extension = "0.8.0"
percent-encoding = "2.1.0"

[dependencies.gtk]
version = "0.15.5"
features = ["v3_20"]

[dependencies.gtk-sys]
version = "0.15.3"
features = ["v3_20"]

